src/css/custom.css
/* ... */
.badge--secondary:hover {
  color: #7085ba;
  background: #dfe6f6;
  transition: all 0.2s ease;
}

a.button {
  background: #a334fb;
  color: white;
  border-radius: 6px;
  padding: 10px 20px;
  position: relative;
  top: 0;
  font-weight: 400;
  font-size: 16px;
  transition: all 0.2s ease;
  margin-bottom: 30px;
}

a.button:hover {
  top: 1px;
  background: #942ae9;
  transition: all 0.2s ease;
}

hr {
  border: none;
  border-top: 1px solid #cacaca;
  margin-top: 80px;
  margin-bottom: 20px;
}

.menu__link--sublist:after {
  background-size: 1rem 1rem;
}

p.podtext {
  width: 100%;
  max-width: 440px;
}

img.manufacturericon {
  width: 200px;
  margin-bottom: 10px;
}
img.homeicon {
  width: 100%;
  margin-bottom: 20px;
}

img.spectrum-access-label {
  width: 100%;
  margin-bottom: 20px;
}

img.crowdspot-vote-button {
  max-width: 200px;
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
}

img.docicon {
  padding-right: 6px;
  height: 16px;
  width: 16px;
}

h1 {
  font-size: 2.75rem;
  letter-spacing: -0.5px;
  margin-top: 20px;
  line-height: 2.5rem;
}

h1.bigger {
  font-size: 3.25rem;
  letter-spacing: -0.5px;
  margin-top: 20px;
  line-height: 3rem;
  font-weight: 600;
}
h2 {
  font-size: 2rem;
  font-weight: 600;
}

h3 {
  font-size: 1.5rem;
  font-weight: 600;
}

h2.subtitle {
  font-weight: 300;
  font-size: 23px;
  letter-spacing: -1%;
  line-height: 24px;
  color: #464c67;
  margin-bottom: 20px;
  margin-top: 20px;
}

h5 {
  margin-top: 40px;
  letter-spacing: 7%;
  font-size: 12px;
  text-transform: uppercase;
  color: #1c1e21;
  opacity: 0.5;
  margin-bottom: 6px;
  font-weight: 500;
}

p {
  color: #626886;
  font-size: 1.125rem;
  line-height: 1.65rem;
  font-weight: 400;
}

a.quicklink {
  display: block;
  background: #f7f9fc;
  margin-bottom: 6px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 14px;
  border-radius: 10px;
  transition: all 0.2s ease;
}

a.quicklink:hover {
  background: #ebeff6;
  transition: all 0.2s ease;
}

html[data-theme='dark'] a.quicklink {
  background: #3e3f3f;
}

html[data-theme='dark'] a.quicklink:hover {
  background: #313232;
}

img.quicklinkarrow {
  opacity: 0.5;
  transition: all 0.2s ease;
  height: 13px;
  width: 13px;
}

a.quicklink:hover img.quicklinkarrow {
  opacity: 1;
  transition: all 0.2s ease;
}

a.quicklinkblue {
  color: #474dff;
}

a.quicklinkblue:hover {
  color: #2d32b6;
}

a.quicklinkgreen {
  color: #0eb98f;
}

a.quicklinkgreen:hover {
  color: #0a8566;
}

a.quicklinkred {
  color: #e35851;
}

a.quicklinkred:hover {
  color: #9c3a35;
}

/* .announcementnav { */
/* background: #474dff; */
/* border-radius: 9999px; */
/* padding: 4px 16px; */
/* color: white; */
/* display: flex; */
/* transition: all 0.2s ease; */
/* align-items: center; */
/* } */
/*  */
/* .announcementnav:hover { */
/* color: white; */
/* } */
/*  */
/* .announcementnav:before { */
/* content: ''; */
/* width: 16px; */
/* height: 16px; */
/* display: inline-block; */
/* padding-right: 6px; */
/* background: url("data:image/svg+xml,%3Csvg viewBox='0 0 16 16'  fill='white' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 1.00002C15.9999 0.829624 15.9563 0.662082 15.8733 0.513287C15.7902 0.364492 15.6706 0.23938 15.5256 0.149821C15.3806 0.0602626 15.2152 0.00922872 15.045 0.00156219C14.8748 -0.00610433 14.7054 0.0298506 14.553 0.106016L6.763 4.00002H3C2.20435 4.00002 1.44129 4.31609 0.87868 4.8787C0.316071 5.4413 0 6.20437 0 7.00002C0 7.79567 0.316071 8.55873 0.87868 9.12134C1.44129 9.68394 2.20435 10 3 10H3.28L5.051 15.316C5.11735 15.5152 5.24472 15.6885 5.41505 15.8113C5.58538 15.934 5.79004 16.0001 6 16H7C7.26522 16 7.51957 15.8947 7.70711 15.7071C7.89464 15.5196 8 15.2652 8 15V10.618L14.553 13.894C14.7054 13.9702 14.8748 14.0061 15.045 13.9985C15.2152 13.9908 15.3806 13.9398 15.5256 13.8502C15.6706 13.7607 15.7902 13.6355 15.8733 13.4867C15.9563 13.3379 15.9999 13.1704 16 13V1.00002Z'/%3E%3C/svg%3E") */
/* no-repeat; */
/* } */

.announcementnav span {
  font-weight: 300;
}

a.block {
  display: block;
  width: fit-content;
  cursor: pointer;
}

.blockblue a {
  color: #474dff;
}

.blockgreen a {
  color: #10ca9d;
}

.blockred a {
  color: #e35851;
}

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.padding-vert--lg {
  padding-bottom: 5rem !important;
  padding-top: 5rem !important;
}

.react-toggle .react-toggle-thumb,
.react-toggle--checked .react-toggle-thumb {
  border-color: #fff !important;
}

.navbar__link:hover,
.navbar__link--active,
.table-of-contents__link:hover,
.table-of-contents__link:hover code,
.table-of-contents__link--active,
.table-of-contents__link--active code {
  color: #a334fb;
}

.navbar__link.announcementnav,
.navbar__link:hover.announcementnav {
  color: white;
  background: #474dff;
  transition: all 0.2s ease;
}

.navbar__link {
  color: black;
}

.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link:before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}
/* ... */

